[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Graphics/Image/zoom.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Canvas.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Image/text.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Image/couleur.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Image/grouper.png" type="Texture" id=6]
[ext_resource path="res://Scripts/FPS CHECK.gd" type="Script" id=7]
[ext_resource path="res://Scene/Titlemenuaddition.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Graphics/Image/settings.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Image/crayon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Image/copier.png" type="Texture" id=11]
[ext_resource path="res://Scene/StateManager.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=13]
[ext_resource path="res://Assets/Graphics/Image/poubelle.png" type="Texture" id=14]
[ext_resource path="res://Scripts/RightClickContainer.gd" type="Script" id=15]
[ext_resource path="res://Assets/Graphics/Image/dragdrop.png" type="Texture" id=16]
[ext_resource path="res://Assets/Graphics/Image/coller.png" type="Texture" id=17]
[ext_resource path="res://Assets/Graphics/Image/save.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/Image/rotation.png" type="Texture" id=19]
[ext_resource path="res://Scripts/CanvasLayer.gd" type="Script" id=20]
[ext_resource path="res://Assets/Graphics/Image/sélection.png" type="Texture" id=21]
[ext_resource path="res://Scripts/LineCounter.gd" type="Script" id=22]
[ext_resource path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" type="Script" id=24]
[ext_resource path="res://Scripts/Position_Mouse.gd" type="Script" id=26]
[ext_resource path="res://Scripts/BackgroundColor.gd" type="Script" id=27]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=28]
[ext_resource path="res://Assets/Graphics/Image/RightClick.png" type="Texture" id=29]
[ext_resource path="res://Assets/Graphics/Image/hand_icon.svg" type="Texture" id=30]
[ext_resource path="res://Scene/ZoomMenuButton.gd" type="Script" id=31]
[ext_resource path="res://Assets/Graphics/Image/ungroup.png" type="Texture" id=32]
[ext_resource path="res://Assets/Graphics/Image/littlecoller.png" type="Texture" id=33]
[ext_resource path="res://Assets/Graphics/Image/littlesave.png" type="Texture" id=34]
[ext_resource path="res://maki_theme.tres" type="Theme" id=35]
[ext_resource path="res://Assets/Graphics/Image/Littletext.png" type="Texture" id=36]
[ext_resource path="res://Assets/Fonts/arial_narrow_7.ttf" type="DynamicFontData" id=37]
[ext_resource path="res://Scripts/pensizecircle.gd" type="Script" id=39]
[ext_resource path="res://Scene/PopUpMot.tscn" type="PackedScene" id=40]
[ext_resource path="res://Scene/ChoixImage.tscn" type="PackedScene" id=41]
[ext_resource path="res://Scene/ModificationWord.tscn" type="PackedScene" id=42]
[ext_resource path="res://Scene/InvalidChoice.tscn" type="PackedScene" id=43]
[ext_resource path="res://Scene/TitleCreationPopUp.tscn" type="PackedScene" id=44]
[ext_resource path="res://Scene/SavePopUpConfirmation.tscn" type="PackedScene" id=45]
[ext_resource path="res://Assets/Graphics/Image/littleCrayon.png" type="Texture" id=46]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 37 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.898039, 0.847059, 0.847059, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="Canvas" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -89.0 ]
}

[node name="BackgroundColored" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 27 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
limit_left = -1000000000
limit_top = -1000000000
limit_right = 1000000000
limit_bottom = 1000000000
script = ExtResource( 13 )

[node name="Elements" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 40.0
margin_right = 468.0
margin_bottom = 35.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="FPS CHECK" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_top = 10.0
margin_bottom = 24.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LinesCounter" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 32.0
margin_top = 10.0
margin_right = 32.0
margin_bottom = 24.0
script = ExtResource( 22 )

[node name="Position_Mouse" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 64.0
margin_top = 10.0
margin_right = 64.0
margin_bottom = 24.0
script = ExtResource( 26 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = -224.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Selection" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 200.0
margin_right = 179.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 64 )
text = "Sélectionner"
icon = ExtResource( 21 )
expand_icon = true

[node name="Drawing" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 268.0
margin_right = 179.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 64 )
text = "Dessiner"
icon = ExtResource( 10 )
expand_icon = true

[node name="MoveCanvas" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 336.0
margin_right = 179.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 64 )
text = "Déplacer"
icon = ExtResource( 30 )
expand_icon = true

[node name="Settings" type="Button" parent="CanvasLayer"]
margin_right = 38.0
margin_bottom = 35.0
icon = ExtResource( 9 )
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = 1024.0
margin_right = 1248.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel2"]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 28 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/Panel2/VBoxContainer"]
margin_top = 132.0
margin_right = 179.0
margin_bottom = 196.0
rect_min_size = Vector2( 64, 64 )
expand_icon = true
color = Color( 0.909804, 0.698039, 0.133333, 1 )

[node name="Button" type="Button" parent="CanvasLayer/Panel2/VBoxContainer/ColorPickerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
text = "Changer Couleur"
icon = ExtResource( 5 )
expand_icon = true

[node name="Create texte" type="Button" parent="CanvasLayer/Panel2/VBoxContainer"]
margin_top = 200.0
margin_right = 179.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 64 )
text = "Créer texte"
icon = ExtResource( 3 )
expand_icon = true

[node name="Save canvas" type="Button" parent="CanvasLayer/Panel2/VBoxContainer"]
margin_top = 268.0
margin_right = 179.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 64 )
text = "Enregistrer"
icon = ExtResource( 18 )
expand_icon = true

[node name="Paste" type="Button" parent="CanvasLayer/Panel2/VBoxContainer"]
margin_top = 336.0
margin_right = 179.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 64 )
text = "Coller"
icon = ExtResource( 17 )
expand_icon = true

[node name="Pen size" type="Button" parent="CanvasLayer/Panel2/VBoxContainer"]
margin_top = 404.0
margin_right = 179.0
margin_bottom = 468.0
rect_min_size = Vector2( 0, 64 )
text = "Taille d'écriture"
icon = ExtResource( 10 )
expand_icon = true

[node name="RightClickButton" type="Button" parent="CanvasLayer"]
margin_left = 986.0
margin_right = 1024.0
margin_bottom = 35.0
icon = ExtResource( 29 )
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="RightClickContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
margin_right = 218.0
margin_bottom = 230.0
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/RightClickContainer"]
margin_right = 218.0
margin_bottom = 36.0
rect_min_size = Vector2( 64, 36 )
expand_icon = true
color = Color( 0.909804, 0.698039, 0.133333, 1 )

[node name="Button" type="Button" parent="CanvasLayer/RightClickContainer/ColorPickerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
text = "Changer Couleur"
icon = ExtResource( 5 )
expand_icon = true

[node name="Create texte" type="Button" parent="CanvasLayer/RightClickContainer"]
margin_top = 40.0
margin_right = 218.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 36 )
text = "Créer texte"
icon = ExtResource( 36 )
expand_icon = true

[node name="Save canvas" type="Button" parent="CanvasLayer/RightClickContainer"]
margin_top = 80.0
margin_right = 218.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 36 )
text = "Enregistrer"
icon = ExtResource( 34 )
expand_icon = true

[node name="Paste" type="Button" parent="CanvasLayer/RightClickContainer"]
margin_top = 120.0
margin_right = 218.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 36 )
text = "Coller"
icon = ExtResource( 33 )
expand_icon = true

[node name="Pen size" type="Button" parent="CanvasLayer/RightClickContainer"]
margin_top = 160.0
margin_right = 218.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 36 )
text = "Taille d'écriture"
icon = ExtResource( 46 )
expand_icon = true

[node name="ActionMenu" type="VBoxContainer" parent="CanvasLayer"]
visible = false
margin_right = 176.0
margin_bottom = 356.0
__meta__ = {
"_edit_group_": true
}

[node name="Delete" type="Button" parent="CanvasLayer/ActionMenu"]
margin_right = 176.0
margin_bottom = 36.0
text = "Supprimer"
icon = ExtResource( 14 )

[node name="Drag And Drop" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 40.0
margin_right = 176.0
margin_bottom = 76.0
text = "Déplacer"
icon = ExtResource( 16 )

[node name="Rescale" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 80.0
margin_right = 176.0
margin_bottom = 116.0
text = "Changer la taille"
icon = ExtResource( 1 )

[node name="Copy" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 120.0
margin_right = 176.0
margin_bottom = 156.0
text = "Copier"
icon = ExtResource( 11 )

[node name="Rotation" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 160.0
margin_right = 176.0
margin_bottom = 196.0
text = "Rotation"
icon = ExtResource( 19 )

[node name="Draw" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 200.0
margin_right = 176.0
margin_bottom = 235.0
text = "Transformer"
icon = ExtResource( 46 )

[node name="Group" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 239.0
margin_right = 176.0
margin_bottom = 275.0
text = "Grouper"
icon = ExtResource( 6 )

[node name="Ungroup" type="Button" parent="CanvasLayer/ActionMenu"]
margin_top = 279.0
margin_right = 176.0
margin_bottom = 315.0
text = "Dégrouper"
icon = ExtResource( 32 )

[node name="ZoomMenuButton" type="Control" parent="CanvasLayer"]
margin_left = 648.0
margin_top = 2.0
margin_right = 787.0
margin_bottom = 38.0
script = ExtResource( 31 )
__meta__ = {
"_edit_group_": true
}

[node name="More" type="Button" parent="CanvasLayer/ZoomMenuButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -18.0
margin_right = 20.0
margin_bottom = 18.0
text = "+"
__meta__ = {
"_edit_group_": true
}

[node name="Less" type="Button" parent="CanvasLayer/ZoomMenuButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -18.0
margin_bottom = 18.0
text = "-"
__meta__ = {
"_edit_group_": true
}

[node name="ZoomText" type="Label" parent="CanvasLayer/ZoomMenuButton"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -17.0
margin_right = -20.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="Titlemenuaddition" parent="." instance=ExtResource( 8 )]
visible = false

[node name="PopUpMotConfirmation" parent="." instance=ExtResource( 40 )]
visible = false

[node name="ModificationWord" parent="." instance=ExtResource( 42 )]
visible = false

[node name="ChoixImage" parent="." instance=ExtResource( 41 )]
visible = false
margin_left = -306.0
margin_top = -135.0
margin_right = -266.0
margin_bottom = -95.0

[node name="InvalidChoice" parent="." instance=ExtResource( 43 )]
visible = false

[node name="SavePopUpConfirmation" parent="." instance=ExtResource( 45 )]
visible = false

[node name="TitleCreationPopUp" parent="." instance=ExtResource( 44 )]
visible = false

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="pensizecircle" type="Node2D" parent="PopupMenu"]
visible = false
scale = Vector2( 5, 5 )
script = ExtResource( 39 )

[node name="HSlider" type="HSlider" parent="PopupMenu"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 25.0
theme = ExtResource( 35 )
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="StateManager" parent="." instance=ExtResource( 12 )]

[node name="OnscreenKeyboard" type="PanelContainer" parent="."]
margin_top = 610.0
margin_right = 1024.0
margin_bottom = 910.0
script = ExtResource( 24 )

[connection signal="gui_input" from="BackgroundColored" to="." method="_on_BackgroundColored_gui_input"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Selection" to="StateManager" method="_on_Selection_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Drawing" to="StateManager" method="_on_Drawing_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/MoveCanvas" to="StateManager" method="_on_MoveCanvas_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="color_changed" from="CanvasLayer/Panel2/VBoxContainer/ColorPickerButton" to="CanvasLayer/RightClickContainer" method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="CanvasLayer/Panel2/VBoxContainer/ColorPickerButton" to="StateManager" method="_on_ColorPickerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/VBoxContainer/Create texte" to="." method="_on_Create_text_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/VBoxContainer/Save canvas" to="StateManager" method="_on_Save_canvas_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/VBoxContainer/Paste" to="StateManager" method="_on_Paste_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/VBoxContainer/Pen size" to="StateManager" method="_on_Pen_Size_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickButton" to="CanvasLayer" method="_on_RightClickButton_pressed"]
[connection signal="color_changed" from="CanvasLayer/RightClickContainer/ColorPickerButton" to="CanvasLayer/RightClickContainer" method="_on_ColorPickerButton_color_changed"]
[connection signal="popup_closed" from="CanvasLayer/RightClickContainer/ColorPickerButton" to="CanvasLayer/RightClickContainer" method="_on_ColorPickerButton_popup_closed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/ColorPickerButton" to="CanvasLayer/RightClickContainer" method="_on_ColorPickerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/ColorPickerButton" to="StateManager" method="_on_ColorPickerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/Create texte" to="." method="_on_Create_texte_RCC_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/Save canvas" to="StateManager" method="_on_Save_canvas_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/Paste" to="StateManager" method="_on_Paste_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/Pen size" to="StateManager" method="_on_Pen_size_pressed"]
[connection signal="pressed" from="CanvasLayer/RightClickContainer/Pen size" to="StateManager" method="_on_Pen_Size_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Delete" to="StateManager" method="_on_Delete_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Drag And Drop" to="StateManager" method="_on_Drag_And_Drop_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Rescale" to="StateManager" method="_on_Rescale_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Copy" to="StateManager" method="_on_Copy_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Rotation" to="StateManager" method="_on_Rotation_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Draw" to="StateManager" method="_on_Draw_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Group" to="StateManager" method="_on_Group_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/Ungroup" to="StateManager" method="_on_Ungroup_pressed"]
[connection signal="pressed" from="CanvasLayer/ZoomMenuButton/More" to="Camera" method="update_zoom" binds= [ false, Vector2( 512, 300 ), true ]]
[connection signal="pressed" from="CanvasLayer/ZoomMenuButton/Less" to="Camera" method="update_zoom" binds= [ false, Vector2( 512, 300 ), false ]]
[connection signal="new_title" from="Titlemenuaddition" to="StateManager" method="_on_Titlemenuaddition_new_title"]
[connection signal="create_title_button" from="TitleCreationPopUp/CreateTitleButton" to="StateManager" method="_on_CreateTitleButton_create_title_button"]
[connection signal="create_sub_title_button" from="TitleCreationPopUp/CreateSubTitleButton" to="StateManager" method="_on_CreateSubTitleButton_create_sub_title_button"]
[connection signal="create_sub_sub_title_button" from="TitleCreationPopUp/CreateSubSubTitleButton" to="StateManager" method="_on_CreateSubSubTitleButton_create_sub_sub_title_button"]
[connection signal="mouse_exited" from="PopupMenu" to="StateManager" method="_on_PopupMenu_mouse_exited"]
[connection signal="value_changed" from="PopupMenu/HSlider" to="StateManager" method="_on_HSlider_value_changed"]

[editable path="TitleCreationPopUp"]
[editable path="StateManager"]
